[fix] align loading icon center

--- a/css/style.css
+++ b/css/style.css
@@ -845,6 +845,9 @@ a:focus {
   -o-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .preloader .icon i:before {
@@ -2262,7 +2265,9 @@ a:focus {
 }
 
 .site-footer .back-to-top a {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: #fff;
   width: 50px;
   height: 50px;
@@ -2271,6 +2276,7 @@ a:focus {
   -o-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
+  position: relative;
 }
 
 .site-footer .back-to-top a span {
@@ -2287,7 +2293,8 @@ a:focus {
   transform: rotate(-45deg);
   position: absolute;
   top: 0;
-  left: 11px;
+  left: 50%;
+  margin-left: -13px;
 }
 
 .site-footer .back-to-top .fi:before {
